# project-management-portal

./: .bumpversion.cfg  .gitignore  README.md
backend/: gunicorn.config.py  pyproject.toml
backend/authentication/: admin.py  models.py
backend/authentication/api/: jwt_auth.py  utils.py
backend/authentication/api/modules/: activate.py  auth_status.py  forgot_password.py  jwt_utils.py  login.py  logout.py  refresh.py  register.py  request_mail_change.py  reset_password.py  update_password.py  user.py  verify_mail_change.py
backend/backend/: asgi.py  settings.py  token_auth.py  urls.py  wsgi.py
backend/media/: README.md
backend/modules/: admin.py  models.py
backend/modules/api/: urls.py
backend/modules/api/modules/: createmodule.py  upload_modulesdata.py
backend/project_factory/: abstract.py  admin.py  apps.py  config.py  factory.py  models.py  utils.py
backend/project_factory/api/: tasks.py
backend/projects/: admin.py  models.py
backend/projects/api/: config.py  exceptions.py  factory.py  urls.py  utils.py
backend/projects/api/modules/: create.py  createmodel.py  upload.py  (+2 more)
backend/request_management/: admin.py  models.py
backend/request_management/api/: urls.py
backend/schema_management/: admin.py  apps.py  models.py
backend/schema_management/api/: urls.py
backend/table_factory/: admin.py  apps.py  config.py  exceptions.py  factory.py  models.py  schema.py  utils.py
backend/table_factory/api/: tasks.py
backend/user_management/: admin.py  models.py  storage.py
backend/user_management/api/: jwt_auth.py  tasks.py  urls.py  utils.py
(+83 files in other folders)
