[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Animesh Kumar Singh <animesh.workplace@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "4.0.5"
O365 = "^2.0.19"
python-dotenv = "^0.20.0"
django-cors-headers = "^3.13.0"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
